modified about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,15 @@
     <link rel="stylesheet" href="/css/styles.css">
     <title>about</title>
 </head>
+
 <body>
     <div class="main-content">
         {{>header}}
-    <img class="portrait" src="\img\IMG_7955.JPG" alt=""/>
+        <p>This site was created by Pranav. It uses data from <a href="https://mapbox.com">Map Box</a>and <a
+                href="https://darksky.net">Dark Sky</a></p>
+        <img class="portrait" src="\img\IMG_7955.JPG" alt="" />
     </div>
     {{>footer}}
 </body>
+
 </html>
