--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,12 @@ h1 {
 }
 
 header a{
+    color: #333333;
+    margin-right: 16px;
+    text-decoration: solid;
+}
+
+a{
     color: #88888888;
     margin-right: 16px;
     text-decoration: none;
